<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.HomeFragment">


        <ImageView
            android:id="@+id/homeTopImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/home_top_background"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/homeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:fontFamily="@font/source_sans_pro_bold"
            android:lineHeight="@dimen/_38sdp"
            android:text="@string/where_s_your_nnext_destination"
            android:textColor="@color/home_title_color"
            android:textFontWeight="700"
            android:textSize="@dimen/_32ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UnusedAttribute" />

        <LinearLayout
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="290dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/homeTopImage">

            <Button
                android:id="@+id/flightButton"
                android:layout_width="@dimen/_79sdp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:drawableTop="@drawable/home_flight_icon"
                android:fontFamily="@font/source_sans_pro_bold"
                android:padding="1dp"
                android:text="@string/flights"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/home_title_color"
                android:textFontWeight="700"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ButtonStyle,KeyboardInaccessibleWidget,ObsoleteLayoutParam,UnusedAttribute" />

            <Button
                android:id="@+id/hotelsButton"
                android:layout_width="@dimen/_79sdp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:drawableTop="@drawable/home_hotel_icon"
                android:fontFamily="@font/source_sans_pro_bold"
                android:padding="1dp"
                android:text="@string/hotels"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/home_title_color"
                android:textFontWeight="700"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ButtonStyle,KeyboardInaccessibleWidget,ObsoleteLayoutParam,UnusedAttribute" />

            <Button
                android:id="@+id/carsButton"
                android:layout_width="@dimen/_79sdp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:drawableTop="@drawable/home_car_icon"
                android:fontFamily="@font/source_sans_pro_bold"
                android:padding="1dp"
                android:text="@string/cars"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/home_title_color"
                android:textFontWeight="700"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ButtonStyle,KeyboardInaccessibleWidget,ObsoleteLayoutParam,UnusedAttribute" />

            <Button
                android:id="@+id/taxiButton"
                android:layout_width="@dimen/_79sdp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:drawableTop="@drawable/home_taxi_icon"
                android:fontFamily="@font/source_sans_pro_bold"
                android:padding="1dp"
                android:text="@string/taxi"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/home_title_color"
                android:textFontWeight="700"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ButtonStyle,KeyboardInaccessibleWidget,ObsoleteLayoutParam,UnusedAttribute" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/homeRecyclerview"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_110sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            tools:listitem="@layout/deals_item" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:fontFamily="@font/source_sans_pro"
            android:textColor="@color/search_title_color"
            android:textSize="@dimen/_20ssp"
            android:textFontWeight="600"
            android:gravity="center"
            android:text="DEALS"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeTopImage" />






    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>