<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="tripData"
            type="com.ersinberkealemdaroglu.tripplanapp.domain.model.tripmodel.TripModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="@dimen/_115sdp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/trips_bookmark_item" />

        <ImageButton
            android:id="@+id/dateButton"
            android:layout_width="51dp"
            android:layout_height="42dp"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="@+id/dateText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.078"
            app:layout_constraintStart_toEndOf="@+id/dateText"
            app:layout_constraintTop_toTopOf="@+id/dateText"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_baseline_date_range_24" />

        <TextView
            android:id="@+id/dateText"
            android:layout_width="240dp"
            android:layout_height="42dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="12dp"
            android:gravity="center_vertical"
            android:text="Date : "
            android:textSize="@dimen/_20ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hotelsText" />

        <TextView
            android:id="@+id/cityText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="50dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/city"
            android:inputType="textPersonName"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/countryText" />

        <TextView
            android:id="@+id/countryText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:autofillHints=""
            android:hint="@string/country"
            android:inputType="textPersonName"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintEnd_toEndOf="@+id/cityText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/cityText"
            app:layout_constraintTop_toBottomOf="@+id/dateText" />

        <TextView
            android:id="@+id/hotelsText"
            android:layout_width="288dp"
            android:layout_height="29dp"
            android:layout_marginTop="12dp"
            android:hint="Hotels Name : "
            android:text="@{tripData.hotel}"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

        <Button
            android:id="@+id/addBookmarkButton"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="4dp"
            android:backgroundTint="@color/detail_button_background_color"
            android:padding="@dimen/_10sdp"
            android:text="@string/add_trip"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityText"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>